--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,10 +3,11 @@
 @import "show_pros";
 @import "show_booking";
 
-#map{
-  width: 450px;
-  height: 200px;
-  margin: 10px auto;
+.map-index {
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-top: 15px;
+
 }
 
 .banner-index-pro {
