--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col">
+  <div class="col right-line">
     <h3 class="mt-3 mx-3">YOUR BOOKINGS</h3>
     <div class="cards mx-3">
       <% @bookings_user.each do |b| %>
