--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,7 +3,7 @@
     <div class="banner-booking-info">
       <h1><%= @booking.offer.name %></h1>
       <h3><%=@booking.offer.user.first_name%> <%= @booking.offer.user.last_name%></h3>
-      <h5><i class="fa-solid fa-location-pin"></i> <%= @booking.location%></h3>
+      <h5><i class="fa-solid fa-location-dot"></i> <%= @booking.location%></h3>
       <h4><span class="badge-pending bg-white mt-1"> Status: <%= @booking.status.capitalize %></span></h4>
     </div>
     <div class="wave">
