--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -122,3 +122,14 @@
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3))
 }
+
+
+@media screen and (max-width: 700px) {
+
+  div.hidden {
+
+  display: none;
+
+  }
+
+  }
