--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -93,7 +93,11 @@
   border-radius: 100px;
   &:hover{
     background-color: $orange;
-    color: white;
+    color: black;
+  }
+  &.active {
+    background-color: $orange;
+    color: black;
   }
 
 }
