--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -60,7 +60,7 @@
   border: 1px solid #e7e7e9;
   justify-content: left !important;
     i {
-      color: white;
+      color: black;
     }
     .form-control {
       border: none;
