--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -2,7 +2,7 @@
   <div class="col right-line">
     <h3 class="mt-3 mx-3">YOUR BOOKINGS</h3>
     <div class="cards mx-3">
-      <% @bookings_user.each do |b| %>
+      <% @bookings_user.where(status: "pending").each do |b| %>
 
         <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020; background-color: #DBE2F4">
 
@@ -43,7 +43,53 @@
         </div>
       <% end %>
     </div>
+
+    <h4 class="mt-3 mx-3"><i>ARCHIVE</i></h4>
+    <div class="cards mx-3">
+
+      <% @bookings_user.where("status != 'pending'").each do |b| %>
+
+        <div class="card-pro p-4" style="box-shadow:0 .25em 1em 0 #00000020, 0 .1em .2em 0 #00000020; background-color: #DBE2F4">
+
+          <div class="card-valide-booking">
+            <h6><%= b.offer.name %></h6>
+            <div><span class="badge bg-custom align-center" style="background: #01123C; color:white; font-size: 13px "></i> Status:<strong> <%=b.status.capitalize %></strong></span></div>
+            <p><%= b.offer.duration %> <%= b.offer.unit_duration %></p>
+            <p>with <%=b.offer.user.first_name %></p>
+            <p><span class="mt-1">begins on <%= b.start_at.strftime('%d-%m-%Y')%></p>
+            <p><i style=" margin-top: 8px; font-size: 16px; color:orange;" class="fa-solid fa-location-dot"></i> <%= b.location %></p>
+            <p><strong><i><%= b.currency %> <%= b.amount %></strong></i><i style="font-size: 25px; color:orange; mb-3" class="fa-solid fa-circle-dollar "></i></p>
+          </div>
+
+            <% if b.status == "pending"  %>
+              <div>
+                <%= link_to "Details", booking_path(b), class: "btn btn-variant justify-content-center" %>
+                <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-cancel"%>
+              </div>
+            <% end %>
+            <% if b.status == "cancelled"  %>
+              <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+                <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
+              </div>
+            <% end %>
+            <% if b.status == "accepted"  %>
+                <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+                  <i style="font-size: 25px; color:green;" class="fa-solid fa-face-smile"></i>
+                </div>
+            <% end %>
+            <% if b.status == "denied"  %>
+                <div class="buttons d-grid">
+                  <%= link_to "Details", booking_path(b), class: "btn btn-variant" %>
+                  <i style="font-size: 25px; color:red;" class="fa-solid fa-face-frown"></i>
+                </div>
+            <% end %>
+          </div>
+      <% end %>
+    </div>
   </div>
+
 
   <div class="col">
     <% if current_user.pro? %>
@@ -93,7 +139,7 @@
           </div>
         <% end %>
       </div>
-      <h4 class="mx-3">ARCHIVE</h4>
+      <h4 class="mt-3 mx-3"><i>ARCHIVE</i></h4>
         <div class="cards mx-3">
         <% @bookings_owner.where("status != 'pending'").each do |b| %>
 
