--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 #background-video {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   object-fit: cover;
   left: 0;
   right: 0;
